--- a/_includes/setup.html
+++ b/_includes/setup.html
@@ -39,14 +39,6 @@
       Installing all the scientific packages for Python individually can be a bit difficult,
       so we recommend an all-in-one installer.
     </p>
-    <h4>R</h4>
-    <p>
-      R is a programming language that specializes in statistical
-      computing. It is a powerful tool for exploratory data analysis. To
-      interact with R, we will
-      use <a href="http://www.rstudio.com/">RStudio</a>, an interactive
-      development environment (IDE).
-    </p>
     <h4>SQL</h4>
     <p>
       SQL is a specialized programming language used with databases.
@@ -55,6 +47,32 @@
     </p>
   </div>
 </div>
+
+<h3>Using a Virtual Machine (Recommended)</h3>
+
+To give everyone a consistent, pre-configured environment, we would prefer that you install a Linux virtual machine. Please:
+<div>
+  </p>
+    <ol>
+      <li>
+	Install <a href="https://www.virtualbox.org/">VirtualBox</a>.
+      </li>
+      <li>
+	Download our <a href="{{site.vm_url}}">VM image</a>.
+	<strong>Warning:</strong>
+	this file is 1.7 GByte,
+	so please download it <em>before</em> coming to your bootcamp.
+      </li>
+      <li>
+	Load the VM into VirtualBox by selecting "Import Appliance"
+	and loading the <code>.ova</code> file.
+      </li>
+    </ol>
+</div>
+
+<h3>Using your own operating system (Optional)</h3>
+
+Everything you need is provided by the workshop virtual machine, and you do not need to install anything else unless you want to run the software on your own computer. <em>Even if you plan to install things yourself please download VirtualBox and the virtual machine as a backup. It can be extremely difficult to get everything set up correctly, and the virtual machine almost always works.</em>
 
 <h3>Windows</h3>
 
@@ -102,14 +120,6 @@
       in order to launch it from the command line
       (or have other tools like Git launch it for you).
       Please ask your instructor to help you do this.
-    </p>
-    <h4>R</h4>
-    <p>
-      Install R by downloading and running
-      <a href="http://cran.r-project.org/bin/windows/base/release.htm">this .exe file</a>
-      from <a href="http://cran.r-project.org/index.html">CRAN</a>.
-      Also, please install the
-      <a href="http://www.rstudio.com/ide/download/desktop">RStudio IDE</a>.
     </p>
     <h4>SQLite</h4>
     <p>
@@ -163,14 +173,6 @@
         make sure to check <strong>Make Anaconda the default Python</strong>.
       </li>
     </ul>
-    <h4>R</h4>
-    <p>
-      Install R by downloading and running
-      <a href="http://cran.r-project.org/bin/macosx/R-latest.pkg">this .pkg file</a>
-      from <a href="http://cran.r-project.org/index.html">CRAN</a>.
-      Also, please install the
-      <a href="http://www.rstudio.com/ide/download/desktop">RStudio IDE</a>.
-    </p>
     <h4>SQLite</h4>
     <p>
       <code>sqlite3</code> comes pre-installed on Mac OS X.
@@ -202,15 +204,6 @@
       <a href="http://kate-editor.org/">Kate</a> is one option for Linux users.
       In a pinch, you can use <code>nano</code>,
       which should be pre-installed.
-    </p>
-    <h4>R</h4>
-    <p>
-      You can download the binary files for your distribution
-      from <a href="http://cran.r-project.org/index.html">CRAN</a>. Or
-      you can use your package manager, e.g. for Debian/Ubuntu
-      run <code>apt-get install r-base</code>. Also, please install
-      the
-      <a href="http://www.rstudio.com/ide/download/desktop">RStudio IDE</a>.
     </p>
     <h4>SQLite</h4>
     <p>
@@ -289,28 +282,4 @@
       </li>
     </ul>
   </div>
-  <div class="span6">
-    <h4>Virtual Machine</h4>
-    <p>
-      Some instructors prefer to have learners use a virtual machine (VM)
-      rather than install software on their own computers.
-      If your instructors have chosen to do this,
-      please:
-    </p>
-    <ol>
-      <li>
-	Install <a href="https://www.virtualbox.org/">VirtualBox</a>.
-      </li>
-      <li>
-	Download our <a href="{{site.vm_url}}">VM image</a>.
-	<strong>Warning:</strong>
-	this file is 1.7 GByte,
-	so please download it <em>before</em> coming to your bootcamp.
-      </li>
-      <li>
-	Load the VM into VirtualBox by selecting "Import Appliance"
-	and loading the <code>.ova</code> file.
-      </li>
-    </ol>
-  </div>
-</div>
+ </div>
