Revised schedule and software installation to remove reference to VM

--- a/_includes/setup.html
+++ b/_includes/setup.html
@@ -48,32 +48,6 @@
   </div>
 </div>
 
-<h3>Using a Virtual Machine (Recommended)</h3>
-
-To give everyone a consistent, pre-configured environment, we would prefer that you install a Linux virtual machine. Please:
-<div>
-  </p>
-    <ol>
-      <li>
-	Install <a href="https://www.virtualbox.org/">VirtualBox</a>.
-      </li>
-      <li>
-	Download our <a href="{{site.vm_url}}">VM image</a>.
-	<strong>Warning:</strong>
-	this file is 1.7 GByte,
-	so please download it <em>before</em> coming to your bootcamp.
-      </li>
-      <li>
-	Load the VM into VirtualBox by selecting "Import Appliance"
-	and loading the <code>.ova</code> file.
-      </li>
-    </ol>
-</div>
-
-<h3>Using your own operating system (Optional)</h3>
-
-Everything you need is provided by the workshop virtual machine, and you do not need to install anything else unless you want to run the software on your own computer. <em>Even if you plan to install things yourself please download VirtualBox and the virtual machine as a backup. It can be extremely difficult to get everything set up correctly, and the virtual machine almost always works.</em>
-
 <h3>Windows</h3>
 
 <div class="row-fluid">
@@ -125,8 +99,7 @@ Everything you need is provided by the workshop virtual machine, and you do not 
     <p>
       Download the <a href="http://files.software-carpentry.org/sqlite3.exe">sqlite3 program</a>
       and put it in the directory where you are running examples.
-      Alternatively,
-      you may install the Firefox SQLite browser plugin described <a href="#firefox-sqlite">below</a>.
+      Please also install the Firefox SQLite browser plugin described <a href="#firefox-sqlite">below</a>.
     </p>
   </div>
 </div>
@@ -176,8 +149,7 @@ Everything you need is provided by the workshop virtual machine, and you do not 
     <h4>SQLite</h4>
     <p>
       <code>sqlite3</code> comes pre-installed on Mac OS X.
-      Alternatively,
-      you may install the Firefox SQLite browser plugin described <a href="#firefox-sqlite">below</a>.
+      Please also install the Firefox SQLite browser plugin described <a href="#firefox-sqlite">below</a>.
     </p>
   </div>
 </div>
@@ -208,8 +180,7 @@ Everything you need is provided by the workshop virtual machine, and you do not 
     <h4>SQLite</h4>
     <p>
       <code>sqlite3</code> comes pre-installed on Linux.
-      Alternatively,
-      you may install the Firefox SQLite browser plugin described <a href="#firefox-sqlite">below</a>.
+      Please also install the Firefox SQLite browser plugin described <a href="#firefox-sqlite">below</a>.
     </p>
   </div>
   <div class="span6">
