Added clarification about installing  Git for older versions of OS X

--- a/_includes/setup.html
+++ b/_includes/setup.html
@@ -126,12 +126,14 @@
     </p>
     <h4>Git</h4>
     <p>
-      Install Git for Mac by downloading and running
-      <a href="http://git-scm.com/downloads">the installer</a>.  For older
-      versions of OS X (10.5-10.7) use the most recent available
-      installer <a href="https://code.google.com/p/git-osx-installer/downloads/list">available
-      here</a>. Use the Leopard installer for 10.5 and the Snow Leopard
-      installer for 10.6-10.7.
+    <dl>
+      <dt>OS X 10.8 and newer</dt>
+      <dd>Install Git for Mac by downloading and running <a href="http://git-scm.com/downloads">the installer</a>.</dd>
+      <dt>OS X 10.6-10.7 (Snow Leopard and Lion)</dt>
+      <dd>Install the <a href="https://code.google.com/p/git-osx-installer/downloads/detail?name=git-1.8.4.2-intel-universal-snow-leopard.dmg">most recent Snow Leopard version of Git for OS X (v1.8.4.2)</a>.
+      <dt>OS X 10.5 (Leopard)</dt>
+      <dd>Install most recent Leopard version of Git for OS X: either <a href="https://code.google.com/p/git-osx-installer/downloads/detail?name=git-1.7.5.4-x86_64-leopard.dmg" >64-bit</a> or <a href="https://code.google.com/p/git-osx-installer/downloads/detail?name=git-1.7.5.4-i386-leopard.dmg" >32-bit</a></dd>
+      <em>Note:</em> versions for OS X <= 10.7 are only available from <a href="https://code.google.com/p/git-osx-installer/downloads/list"> Google code</a>
     </p>
   </div>
   <div class="span6">
