Another tweak to OS X Git instructions.

--- a/_includes/setup.html
+++ b/_includes/setup.html
@@ -127,13 +127,14 @@
     <h4>Git</h4>
     <p>
     <dl>
-      <dt>OS X 10.8 and newer</dt>
+      <dt>OS X 10.8-10.9 (Mountain Lion and Mavericks)</dt>
       <dd>Install Git for Mac by downloading and running <a href="http://git-scm.com/downloads">the installer</a>.</dd>
       <dt>OS X 10.6-10.7 (Snow Leopard and Lion)</dt>
-      <dd>Install the <a href="https://code.google.com/p/git-osx-installer/downloads/detail?name=git-1.8.4.2-intel-universal-snow-leopard.dmg">most recent Snow Leopard version of Git for OS X (v1.8.4.2)</a>.
+      <dd>Install the <a href="https://code.google.com/p/git-osx-installer/downloads/detail?name=git-1.8.4.2-intel-universal-snow-leopard.dmg">most recent Snow Leopard version of Git for OS X</a>.
       <dt>OS X 10.5 (Leopard)</dt>
-      <dd>Install most recent Leopard version of Git for OS X: either <a href="https://code.google.com/p/git-osx-installer/downloads/detail?name=git-1.7.5.4-x86_64-leopard.dmg" >64-bit</a> or <a href="https://code.google.com/p/git-osx-installer/downloads/detail?name=git-1.7.5.4-i386-leopard.dmg" >32-bit</a></dd>
-      <em>Note:</em> versions for OS X <= 10.7 are only available from <a href="https://code.google.com/p/git-osx-installer/downloads/list"> Google code</a>
+      <dd>Install most recent Leopard version of Git for OS X: <a href="https://code.google.com/p/git-osx-installer/downloads/detail?name=git-1.7.5.4-x86_64-leopard.dmg" >64-bit</a> or <a href="https://code.google.com/p/git-osx-installer/downloads/detail?name=git-1.7.5.4-i386-leopard.dmg" >32-bit</a></dd>
+       <!--<em>Note:</em> versions for OS X <= 10.7 are only available from <a href="https://code.google.com/p/git-osx-installer/downloads/list"> Google code</a>-->
+      
     </p>
   </div>
   <div class="span6">
